# oceanics.io

./: .dockerignore  .envrc  .eslintignore  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .snyk  .yarnrc.yml  Cargo.toml  Dockerfile  Dockerfile.capsize  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  __Pipfile copy  __requirements.txt  array.py  bathysphere-graph-env.sh.secret  bathysphere.yaml  bitbucket-pipelines.yml  bivalve.Dockerfile  bivalve.md  build-wasm.sh  cache.json  cache.ts  cli.py  datatypes.py  docker-compose.yml  environment.yml  eslint.config.js  examples.spec.ts  examples.ts  functions.spec.ts  gatsby-browser.js  gatsby-config.js  gatsby-node.js  (+24 more)
app/: Cargo.toml  Index.tsx  Oceanics.module.css  Oceanics.tsx  Oceanside.tsx  client.tsx  globals.css  icons.json  index.module.css  layout.css  layout.module.css  layout.tsx  lib.rs  not-found.tsx  oceanics.json  oceanics.rs  page.module.css  page.tsx  useOceanics.tsx  useOceanside.tsx  worker.ts
app/404/: page.tsx
app/about/: Equation.tsx  Subscribe.tsx  about.module.css  client.tsx  layout.tsx  mod.rs  page.module.css  page.tsx
app/about-us/: page.tsx
app/bets/: References.tsx  References.worker.ts
app/catalog/: Catalog.tsx  Channel.tsx  Linked.tsx  Map.tsx  Node.tsx  catalog.module.css  client.module.css  client.tsx  cursor.rs  layout.tsx  mesh.rs  mod.rs  page.module.css  page.tsx  sensor_things.rs  stac.rs  useCatalog.tsx  useCollection.tsx  useCreate.tsx  useSqualltalk.tsx  vec3.rs  webgl.rs  worker-utils.ts  worker.ts
app/checklist/: marine-operators-software-rubric.mdx
app/compute/: Compute.tsx  context.tsx  mesh.rs  mod.rs  page.tsx  webgl.rs  worker.ts
app/read/: lexicon.ts
app/simulation/: Shaders.context.tsx
app/subscribe/: Subscribe.tsx  layout.tsx  page.tsx
app/upcoming-events/: Event.tsx  page.tsx
app/verify/: client.tsx  page.tsx
app/words/: Document.tsx  useReferences.tsx
bathysphere/: Cargo.toml  __init__.py  actuator.py  bathysphere.css  bivalve.Dockerfile  cli.py  datatypes.py  functions.py  image.py  models.py  object_storage.py  parser.py  pathfinder.py  satlantic.py  shellfish.py  storage.py  utils.py
bathysphere/archive/: archive.py  queries.py  satlantic.py
bathysphere/array/: models.py  storage.py  utils.py
bathysphere/bathysphere/: __init__.py  api.py  avhrr.py  capsize.py  conftest.py  functions.py  models.py  render.py  test.py  utils.py  worker.py
bathysphere/bivalve/: __init__.py  handlers.py  io.py
bathysphere/capsize/: __init__.py  models.py
bathysphere/codex/: __init__.py  functions.py
bathysphere/controller/: controller.py
bathysphere/datastream/: core.py  functions.py
bathysphere/feature/: functions.py
bathysphere/filter/: core.py
bathysphere/functions/: drivers.py  image.py  requirements.txt
bathysphere/future/: __init__.py  chemistry.py  datatypes.py  defaults.py  functions.py  osi_analysis.py  physics.py  reactor.py  test_bivalve.py  utils.py
bathysphere/glsl/: screen-fragment.glsl
bathysphere/graph/: __init__.py  drivers.py  functions.py  handlers.py  models.py
bathysphere/image/: __init__.py  functions.py  models.py
bathysphere/lazerette/: storage.py
bathysphere/neritics/: __init__.py
bathysphere/parse/: parser.py
bathysphere/quantize/: mesh_drivers.py
bathysphere/simulate/: __init__.py  chemistry.py  fall_line.py  physics.py  phytoplankton.py  sediment.py  shellfish.py
bathysphere/simulation/: boundary.py
bathysphere/src/: behavior.rs  lagrangian.rs  lib.rs  microcystis.rs  shellfish.rs  simulation.rs  variables.rs
bathysphere/test/: conftest.py  test_api.py  test_array.py  test_bivalve.py  test_cloudsql.py  test_datatypes.py  test_datatypes_cloudsql.py  test_datatypes_image.py  test_datatypes_ndarray.py  test_datatypes_object_store.py  test_datatypes_redis.py  test_graph.py  test_graph_task.py  test_image.py  test_object_storage.py  test_simulate.py  test_simulate_shellfish.py
bathysphere/tests/: conftest.py  test.sh  test_base_account.py  test_clock.py  test_datatypes.py  test_datatypes_cloudsql.py  test_datatypes_image.py  test_datatypes_linked_list.py  test_datatypes_ndarray.py  test_datatypes_object_store.py  test_datatypes_redis.py  test_function_image_spatial.py  test_function_image_time.py  test_function_postgres.py  test_function_queue.py  test_future_chemistry.py  test_graph.py  test_graph_account.py  test_graph_catalog.py  test_graph_sensor_things.py  test_graph_storage.py  test_image.py  test_ndarray.py  test_postgres.py  test_quantize_avhrr_dataset.py  test_quantize_osi_analysis.py  test_queue.py  test_shapes.py  test_simulate_shellfish.py  test_simulation_bivalve.py  test_simulation_core.py  test_wind.py
bathysphere/wind/: wind.html
functions/: .eslintrc.json  Cargo.toml  __init__.py  api.mts  cache.json  cache.py  cloud_sql.py  collection.mts  collection.rs  content.ts  cypher.rs  entity.mts  entity.rs  index.mts  lib.rs  object_store.py  openapi.rs  render.py  storage.ts  submission-created-background.mts  topology.mts  topology.rs  tsconfig.json  verify-email.mts
functions/buoy-data/: buoy-data.js
functions/echo/: echo.js  test.js
functions/edge/: validate.mts
functions/get/: get.js
functions/image/: styles.yml
functions/lexicon/: lexicon.js  lexicon.yml
functions/mesh/: mesh.js
functions/mesh-nodes/: mesh-nodes.js  test.js
functions/mesh-nodes-background/: mesh-nodes-background.js
functions/mesh-topology/: mesh-topology.js
functions/src/: api.mts  collection.mts  collection.rs  entity.mts  entity.rs  identity-signup-background.mts  index.mts  index.rs  linked.mts  linked.rs  mod.rs  submission-created-background.mts  topology.mts  topology.rs  verify-email.mts  (+2 more)
oceanics-io-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  cli.py  conftest.py  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements.txt  test-api.mjs  test-cache.js  test-utils.ts  test.mjs  tsconfig.json
oceanics-io-api-rust/: Cargo.toml
oceanics-io-wasm-sim/: Cargo.toml  README.md
oceanics-io-www-rust/: Cargo.toml
(+1905 files in other folders)
