[package]
name = "bathysphere"
version = "0.1.0"
authors = ["Oceanicsdotio <aquaculture@oceanics.io>"]
edition = "2018"
description = "Marine Geospatial Functions"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"
js-sys = "0.3.32"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'Window',
    'console',
    'ImageData',
    'CanvasRenderingContext2d'
]

