[package]
name = "oceanics-io-www-wasm"
version = "0.1.0"
authors = ["Oceanicsdotio LLC <business@oceanics.io>"]
edition = "2018"
description = "User interaction and visualization methods for our web frontend."
license = "MIT"
repository = "git+https://github.com/oceanicsdotio/oceanics.io.git"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[profile.release]
opt-level = "s"

[dependencies]
js-sys = "0.3.70"
wasm-bindgen-futures = "0.4.43"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
regex = "1.10.6"
chrono = { version = "0.4.38", features = ["serde"] }
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
web-sys = { version = "0.3.70", features = [
    'CanvasGradient',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'Headers',
    'HtmlCanvasElement',
    'HtmlElement',
    'HtmlImageElement',
    'ImageData',
    'Node',
    'Performance',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'TextMetrics',
    'WebGlBuffer',
    'WebGlFramebuffer',
    'WebGlProgram',
    'WebGlActiveInfo',
    'WebGlUniformLocation',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'Window',
    'console'
]}
indexmap = "2.5.0"
