[package]
name = "bathysphere"
version = "0.1.0"
authors = ["Nicholas Keeney <nkeeney@oceanics.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bathysphere"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
