[package]
name = "bathysphere"
version = "2.0.0"
authors = ["Oceanicsdotio <business@oceanics.io>"]
edition = "2018"

[lib]
name = "bathysphere"
crate-type = ["cdylib"]

[dependencies]
yaml-rust = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.17"
serde_derive = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
