[package]
name = "bathysphere"
version = "2.0.0"
authors = ["Oceanicsdotio <business@oceanics.io>"]
edition = "2018"


[lib]
name = "bathysphere"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features= [ "derive" ]}
serde_json = "1.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
