[package]
name = "data-oceanics-io-wasm"
version = "0.1.0"
authors = ["Oceanicsdotio LLC <business@oceanics.io>"]
edition = "2018"
description = "API level drivers"
license = "MIT"
repository = "git+https://github.com/oceanicsdotio/oceanics.io.git"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[profile.release]
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz"
]

# unused code scanning, machete not included in install
[package.metadata.cargo-machete]
ignored = ["serde_derive", "wasm-bindgen-futures"]

[dependencies]
serde = { version = "1.0.224", features = ["derive"] }
serde_derive = "1.0.219"
# no-std compatibility, while allowing heap
serde_json = {version="1.0.143", default-features = false, features = ["alloc"]}
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
base64 = "0.22.1"
