[package]
name = "oceanics-io-api-wasm"
version = "0.1.0"
authors = ["Oceanicsdotio LLC <business@oceanics.io>"]
edition = "2018"
description = "API level drivers"
license = "MIT"
repository = "git+https://github.com/oceanicsdotio/oceanics.io.git"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_derive = "1.0.192"
js-sys = "0.3.56"
wasm-bindgen-futures = "0.4.29"
serde-wasm-bindgen = "0.6.1"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.22", features = ["serde"] }

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
# see https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies.wasm-bindgen]
version = "0.2.88"
features = ["serde-serialize"]
