[package]
name = "oceanics-io-api-wasm"
version = "0.1.0"
authors = ["Oceanicsdotio LLC <business@oceanics.io>"]
edition = "2018"
description = "API level drivers"
license = "MIT"
repository = "git+https://github.com/oceanicsdotio/oceanics.io.git"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10.5"
hmac = "0.12.1"
jwt = "0.16.0"
regex = "1"
js-sys = "0.3.56"
wasm-bindgen-futures = "0.4.29"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.22", features = ["serde"] }
pbkdf2 = "0.11"
rand_core = { version = "0.6", features = ["std"] }

# Transitive dependency requires feature:
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
[dependencies.getrandom]
features = ["js"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng",  # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
# see https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies.wasm-bindgen]
version = "0.2.79"
features = ["serde-serialize"]
