[package]
name = "oceanics-io-api-wasm"
version = "0.1.0"
authors = ["Oceanicsdotio LLC <business@oceanics.io>"]
edition = "2018"
description = "API level drivers"
license = "MIT"
repository = "git+https://github.com/oceanicsdotio/oceanics.io.git"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
hex = "0.4.3"
sha2 = "0.10.8"
hmac = "0.12.1"
jwt = "0.16.0"
regex = "1.10.2"
js-sys = "0.3.66"
wasm-bindgen-futures = "0.4.39"
serde_json = "1.0.108"
serde-wasm-bindgen = "0.6.1"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.31", features = ["serde"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand_core = { version = "0.6.4", features = ["std"] }
base64 = "0.21.7"

# Transitive dependency requires feature:
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
[dependencies.getrandom]
features = ["js"]

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng",  # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
opt-level = "s"

[dependencies.wasm-bindgen]
version = "0.2.89"
features = ["serde-serialize"]
