[package]
name = "oceanics-io-wasm-ui"
version = "0.3.0"
authors = ["Oceanicsdotio LLC <business@oceanics.io>"]
edition = "2018"
description = "Computational kernels"
license = "MIT"
repository = "git+https://github.com/oceanicsdotio/oceanics.io.git"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.56"
wasm-bindgen-futures = "0.4.29"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
# https://docs.rs/getrandom/0.2.2/getrandom/#unsupported-targets
getrandom = { version = "0.2.5", features = ["js"] }

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
# see https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies.wasm-bindgen]
version = "0.2.79"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlFramebuffer',
    'WebGlTexture',
    'Window',
    'console',
    'ImageData',
    'CanvasRenderingContext2d',
    'CanvasGradient',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Performance',
    'TextMetrics',
    'console'
]


